test/files/neg/macro-divergence-controlled.check
Test_2.scala:2: error: implicit error;
!I e: Complex[Foo]
  println(implicitly[Complex[Foo]])
                    ^
1 error
